--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -88,36 +88,42 @@
 </section>
 <section class="musicMobile">
     <div class="d-block d-sm-block d-md-block d-lg-none">
-        <h2>Don't Worry</h2>
+        <div class=”row”>
+            <div class=”col-6 align-self-center”>
 
-        <!-- Trigger/Open The Modal -->
+                <h2>Don't Worry</h2>
 
-        <img class="myBtn" th:src="@{/images/dontworrycover.png}" alt="Dont_worry_album_art"
-             style="width:100%;max-width:300px">
+                <!-- Trigger/Open The Modal -->
 
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
+                <img class="myBtn" th:src="@{/images/dontworrycover.png}" alt="Dont_worry_album_art"
+                     style="width:100%;max-width:300px">
 
-            <!-- Modal content -->
-                <span class="close">×</span>
-                <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="100%" height="480"
-                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <!-- The Modal -->
+                <div id="myModal" class="modal">
 
-        </div>
+                    <!-- Modal content -->
+                    <span class="close">×</span>
+                    <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="100%"
+                            height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-        <h2>Brown Boy Funk</h2>
+                </div>
 
-        <!-- Trigger/Open The Modal -->
-        <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
-             style="width:100%;max-width:300px">
+                <h2>Brown Boy Funk</h2>
 
-        <!-- The Modal -->
-        <div id="myModal2" class="modal">
+                <!-- Trigger/Open The Modal -->
+                <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
+                     style="width:100%;max-width:300px">
 
-            <!-- Modal content -->
-                <span class="close">×</span>
-                <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%" height="480"
-                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <!-- The Modal -->
+                <div id="myModal2" class="modal">
+
+                    <!-- Modal content -->
+                    <span class="close">×</span>
+                    <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%" height="480"
+                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
         </div>
     </div>
 </section>
