--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -88,41 +88,45 @@
 </section>
 <section class="musicMobile">
     <div class="d-block d-sm-block d-md-block d-lg-none">
-        <div class=”row”>
-            <div class=”col-6 align-self-center”>
-
+        <div class="album1">
+            <div class="d-flex justify-content-center">
                 <h2>Don't Worry</h2>
-
+            </div>
+            <div class="d-flex justify-content-center">
                 <!-- Trigger/Open The Modal -->
-
                 <img class="myBtn" th:src="@{/images/dontworrycover.png}" alt="Dont_worry_album_art"
                      style="width:100%;max-width:300px">
+            </div>
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
 
-                <!-- The Modal -->
-                <div id="myModal" class="modal">
+                <!-- Modal content -->
+                <span class="close">×</span>
+                <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="100%"
+                        height="480"
+                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-                    <!-- Modal content -->
-                    <span class="close">×</span>
-                    <iframe src="https://open.spotify.com/embed/album/5dOi6L7oNgZEe7G05EKHA9" width="100%"
-                            height="480"
-                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-                </div>
+            </div>
+        </div>
+        <div class="album2">
+            <div class="d-flex justify-content-center">
 
                 <h2>Brown Boy Funk</h2>
+            </div>
+            <div class="d-flex justify-content-center">
 
                 <!-- Trigger/Open The Modal -->
                 <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
                      style="width:100%;max-width:300px">
+            </div>
+            <!-- The Modal -->
+            <div id="myModal2" class="modal">
 
-                <!-- The Modal -->
-                <div id="myModal2" class="modal">
-
-                    <!-- Modal content -->
-                    <span class="close">×</span>
-                    <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%" height="480"
-                            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                </div>
+                <!-- Modal content -->
+                <span class="close">×</span>
+                <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%"
+                        height="480"
+                        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
     </div>
