--- a/src/main/resources/static/music.css
+++ b/src/main/resources/static/music.css
@@ -6,8 +6,9 @@ body, html{
     font-family: "lato", sans-serif;
     font-weight: 400;
     line-height: 1.8em;
-    color:#666;
-    background-image: url("images/clown-cloud.gif");
+    background-color:#1c1c1c;
+    /*color:#666;*/
+    /*background-image: url("images/clown-cloud.gif");*/
     background-repeat: no-repeat;
     background-size: cover;
     overflow: scroll;
