--- a/src/main/resources/templates/art.html
+++ b/src/main/resources/templates/art.html
@@ -97,13 +97,13 @@
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/art">Shop</a>
+                        <a class="nav-link" href="/Shop">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/music">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/shop">Magazine</a>
+                        <a class="nav-link" href="/magazine">Magazine</a>
                     </li>
                 </ul>
             </div>
