--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -88,9 +88,13 @@
 </section>
 <section class="musicMobile">
     <div class="d-block d-sm-block d-md-block d-lg-none">
+        <div class="jumbotron-fluid">
+                <img th:src="@{/images/zerktronic-music-page.png}" alt="Zerk"
+                     style="width:100%">
+        </div>
         <div class="album1 mt-3">
             <div class="d-flex justify-content-center">
-                <h2>Don't Worry</h2>
+                <h2 style="color:white;">Don't Worry</h2>
             </div>
             <div class="d-flex justify-content-center">
                 <!-- Trigger/Open The Modal -->
@@ -111,7 +115,7 @@
         <div class="album2 mt-3">
             <div class="d-flex justify-content-center">
 
-                <h2>Brown Boy Funk</h2>
+                <h2 style="color:white;">Brown Boy Funk</h2>
             </div>
             <div class="d-flex justify-content-center">
 
