--- a/src/main/resources/templates/partials/mobile-music-navbar.html
+++ b/src/main/resources/templates/partials/mobile-music-navbar.html
@@ -9,8 +9,8 @@
 <body>
 <div th:fragment="mobile-music-navbar">
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-Black.png}" title="Gacho icon black" width="50px" height="50px"/></a>
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/" ><img th:src="@{/images/Gacho-Icon-White.png}" title="Gacho icon black" width="50px" height="50px"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
