--- a/src/main/resources/templates/music.html
+++ b/src/main/resources/templates/music.html
@@ -89,7 +89,6 @@
     <div class="d-block d-sm-block d-md-block d-lg-none">
         <div class="jumbotron-fluid">
                 <img th:src="@{/images/Zerk-header.png}" alt="Zerk"
-                <img th:src="@{/images/zerktronic-music-page.png}" alt="Zerk"
                      style="width:100%">
         </div>
         <div class="album1 mt-3">
@@ -158,12 +157,6 @@
 
                 <h2 style="color:white;">From The Back</h2>
             </div>
-        </div>
-        <div class="album2 mt-3">
-            <div class="d-flex justify-content-center">
-
-                <h2 style="color:white;">Brown Boy Funk</h2>
-            </div>
             <div class="d-flex justify-content-center">
 
                 <!-- Trigger/Open The Modal -->
@@ -175,25 +168,7 @@
 
                 <!-- Modal content -->
                 <span class="close">×</span>
-                <iframe src="https://open.spotify.com/embed/album/53H9Cy29R8mKYNWE7QuhHg" width="100%"
-                <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
-            </div>
-            <!-- The Modal -->
-            </div>
-            <div class="d-flex justify-content-center">
-
-                <!-- Trigger/Open The Modal -->
-                <img class="myBtn" th:src="@{/images/brownboycover.jpg}" alt="Dont_worry_album_art"
-                     style="width:100%;max-width:300px">
-            </div>
-            <!-- The Modal -->
-            <div id="myModal2" class="modal">
-
-                <!-- Modal content -->
-                <span class="close">×</span>
-                <iframe src="https://open.spotify.com/embed/album/4Vhgjt5Y7qxPaDermRF2AG" width="100%"
-                        height="480"
+                <iframe src="https://open.spotify.com/embed/album/53H9Cy29R8mKYNWE7QuhHg" width="100%" height="480"
                         frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
