--- a/src/main/resources/static/music.css
+++ b/src/main/resources/static/music.css
@@ -6,7 +6,7 @@ body, html{
     font-family: "lato", sans-serif;
     font-weight: 400;
     line-height: 1.8em;
-    background-color:#1c1c1c;
+    background-color:#2B2426;
     /*color:#666;*/
     /*background-image: url("images/clown-cloud.gif");*/
     background-repeat: no-repeat;
